# forensic-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: activity.rs  artifact.rs  bitacora.rs  channel.rs  context.rs  data.rs  dictionary.rs  err.rs  lib.rs
src/core/: fs.rs  mod.rs  user.rs
src/core/fs/: chroot.rs  mod.rs  stdfs.rs
src/field/: internal.rs  ip.rs  mod.rs  utils.rs
src/logging/: macros.rs  mod.rs
src/notifications/: macros.rs  mod.rs
src/traits/: forensic.rs  mod.rs  registry.rs  sql.rs  vfs.rs
src/traits/registry/: mod.rs
src/traits/registry/extra/: env_vars.rs  mod.rs
src/utils/: mod.rs  testing.rs  time.rs  unpack.rs  win.rs
src/utils/win/: csidl.rs  mod.rs  sid.rs
tests/: logging.rs  notifications.rs
