[package]
name = "forensic-rs"
version = "0.9.0"
authors = ["Samuel Garcés Marín <samuel.garces@protonmail.com>"]
keywords = ["forensic", "windows", "parser", "registry", "cybersecurity"]
categories = ["parsing"]
description = "A Rust-based framework to build tools that analyze forensic artifacts and can be reused as libraries across multiple projects without changing anything."
license = "MIT"
edition = "2021"
repository = "https://github.com/ForensicRS/forensic-rs"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = {version = "1", optional = true}

[dev-dependencies]
sqlite = "0.28.1"
serde_json = "1"